--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -125,17 +132,11 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>6.0.4</version>
                 <configuration>
-                    <url>jdbc:h2:file:/Users/br/githubws/crawler-1/crawlerDB</url>
+<!--                    <url>jdbc:h2:file:/Users/br/githubws/crawler-1/crawlerDB</url>-->
+                    <url>jdbc:mysql://localhost:3306/news?characterEncoding=utf8</url>
                     <user>root</user>
                     <password>root</password>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.h2database</groupId>
-                        <artifactId>h2</artifactId>
-                        <version>1.4.199</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
